--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "gsap": "^3.11.5",
     "lucide-react": "^0.196.0",
     "next": "13.3.4",
     "postcss": "8.4.23",
@@ -35,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
